<resources>
    <string name="app_name">SeaWhispers</string>
    <string name="description">Description</string>
    <string name="post_title">Titre de la publication</string>
    <string name="post_button">Publier</string>
    <string name="new_picture">Prendre une photo</string>
    <string name="select_picture">Selectionner une photo</string>
    <string name="signin_title">Se connecter</string>
    <string name="signin_email">Addresse e-mail</string>
    <string name="enter_email">Entrez votre adresse e-mail</string>
    <string name="enter_password">Entrez votre mot de passe</string>
    <string name="enter_password_again">Confirmez votre mot de passe</string>
    <string name="signin_password">Mot de Passe</string>
    <string name="signin_connect">Se connecter</string>
    <string name="create_account">Créer compte</string>
    <string name="create_account_title">Création de compte</string>
    <string name="titre_post">Titre du Post</string>
    <string name="nom_posteur">Nom du Posteur</string>
    <string name="description_post">Description du Post</string>
    <string name="commentaires_post">Commentaire du Post</string>
    <string name="cell_detail">Voir plus</string>
    <string name="post_detail_title">Title</string>
    <string name="post_detail_comment">Ecrivez votre commentaire</string>
</resources>