<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detailPost">

    <TextView
        android:id="@+id/activityDetailPostTitle"
        android:layout_width="210dp"
        android:layout_height="97dp"
        android:text="@string/titre_post"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <ImageView
        android:id="@+id/activityDetailPostPdp"
        android:layout_width="92dp"
        android:layout_height="94dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/activityDetailPostNomPosteur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="16dp"
        android:text="@string/nom_posteur"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activityDetailPostDescriptionPost"
        android:layout_width="365dp"
        android:layout_height="111dp"
        android:text="@string/description_post"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="410dp" />

    <TextView
        android:id="@+id/activityDetailPostCommentairePost"
        android:layout_width="357dp"
        android:layout_height="77dp"
        android:text="@string/commentaires_post"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityDetailPostDescriptionPost"
        app:layout_constraintVertical_bias="0.23000002" />

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38"
        tools:layout_editor_absoluteX="171dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="274dp"
        android:layout_height="381dp"
        app:srcCompat="@drawable/logoheart"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="326dp" />

</androidx.constraintlayout.widget.ConstraintLayout>